rollout-demo-cafe/rollout-cafe.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  replicas: 4 
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
      - image: nginxdemos/hello:plain-text
        imagePullPolicy: Always
        name: canary-demo
        ports:
        - containerPort: 80
  strategy:
    canary:
      steps:
      - experiment:
          duration: 5m
          templates:
          - name: baseline
            specRef: stable
            metadata:
              annotations:
                "stack": "base"
          - name: canary
            specRef: canary
            metadata:
              annotations:
                "stack": "canary"
          analyses:
          - name: success-rate
            templateName: success-rate
            args:
            - name: stable-hash
              valueFrom:
                podTemplateHashValue: Stable
            - name: l1
              value: tax
            - name: l2
              value: taxdev
            - name: env
              value: prod
            - name: canary-hash
              valueFrom:
                podTemplateHashValue: Latest
