rollout-demo-cafe/cafe-canary-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 192.168.56.101
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: canary-demo
          servicePort: 80
