rollout-demo-cafe/cafe-canary-demo-preview-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary-demo-preview
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: preview-cafe.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: canary-demo-preview
          servicePort: 80
